Add zero-config demo mode and smoke tests